PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: No longer clear test profile identifiers on secondary saved results
pts-core: Minor fixes
phodevi: LXQt desktop version reporting
phodevi: Update for Microsoft Windows Server 2019

Phoronix Test Suite 8.4.1-Skiptvet
9 December 2018

pts-core: Workaround for RHEL 7.6 PHP having buggy CURL that is causing seg faults
pts-core: Ensure "." doesn't get set in PATH when launching phoronix-test-suite
pts-core: Allow PRESET_OPTIONS env var to be used when in batch mode
pts-core: FreeBSD updates
pts-core: Add PRESET_OPTIONS_VALUES environment variable that is similar to PRESET_OPTIONS but for explicit values
phodevi: Improved Radeon AMDGPU frequency detection/reporting
phodevi: Add support for reading GPU usage sensor with AMDGPU gpu_busy_percent sysfs interface
phodevi: Updated gpu_voltage sensor for AMDGPU driver
phodevi: Updated gpu_power sensor for AMDGPU driver
phodevi: Updated gpu_fanspeed sensor for AMDGPU driver
phodevi: Updated gpu_freq sensor for AMDGPU driver
phodevi: Improved physical CPU core detection on DragonFlyBSD 5.4
phodevi: Improved Spectre detection on DragonFlyBSD 5.4
phodevi: Allow using NUM_CPU_CORES to override the number of exposed CPU threads/cores to tests (alternative to PTS_NPROC / NUMBER_OF_PROCESSORS)
phodevi: Improved multi-disk reporting for non-Linux operating systems
phodevi: Minor GPU string reporting improvement

Phoronix Test Suite 8.4.0-Skiptvet
26 November 2018

phodevi: Various minor tweaks

Phoronix Test Suite 8.4.0 Milestone 3
20 November 2018

pts-core: Various external dependency updates
pts-core: Expose NUM_CPU_PHYSICAL_CORES to test profiles as alternative to NUM_CPU_CORES (logical count)
pts-core: Fix possible situation of openbenchmarking-refresh not updating when IndexCacheTTL is set to 0
pts-core: Allow branded colors to work in the terminal/CLI text graphs
pts-core: Continued POWER9 support improvements