@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: No longer clear test profile identifiers on secondary saved results
+pts-core: Add compare-results-to-baseline sub-command for comparing one result file (baseline) against a set of results for text look at relative perf
 pts-core: Minor fixes
 phodevi: LXQt desktop version reporting
 phodevi: Update for Microsoft Windows Server 2019
